# margin

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  PIPELINE-AUDIT.md  PLANS.md  README.md  RELEASE_BACKLOG.md  THEORY.MD  compound.config.json  editor-fixes-watcher-races.patch  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.harness/: review.sh
.harness/adapters/: adapter-schema.json  claude-code.sh  clippy-json.sh
.harness/scripts/: audit-gaps.mjs
Margin/: Package.swift
cli/: Makefile  go.mod  main.go
cli/bridge/: bridge.go
cli/cmd/: annotations.go  corrections.go  docs.go  export.go  highlights.go  notes.go  root.go  rules.go  skill_install.go
cli/db/: annotations.go  corrections.go  db.go  documents.go  documents_test.go  highlights.go  notes.go  rules.go
cli/output/: output.go
cli/profile/: export.go  export_test.go
cli/skill/: template.go
demo/: .gitignore  package.json  tsconfig.json
demo/src/: HeroDemo.tsx  (+3 more)
docs/: architecture.md  evals.md  feedback-synthesis-rules-pipeline-audit.md  harness-engineering.md  invariants.md  pi-autoresearch.md  product-strategy.md  product-vision.md  tauri-vs-swift-analysis.md  technical-strategy.md  troubleshooting.md
mcp/: package.json  tsconfig.json
reports/: swift-feature-parity-2026-02-24.md  swift-rebuild-audit-2026-02-24.md
scripts/: extract-tokens.ts  lint-tokens-baseline.json  lint-tokens.ts  sync-version.sh  verify
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: annotations.rs  corrections.rs  dashboard.rs  documents.rs  files.rs  keep_local.rs  mod.rs  search.rs  seed_rules.rs  snapshots.rs  tabs.rs  writing_rules.rs
src-tauri/src/db/: migrations.rs  models.rs
tasks/: prd-swift-critical-fixes.md  prd-swift-feature-parity.md
(+235 files in other folders)
